force-app/main/default/objects/TimeSheetEntry/TimeSheetEntry.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>