force-app/main/default/objects/TimeSheetEntry/fields/EFT_DureeEnHeure__c.field-meta.xml
<CustomField>
    <fullName>EFT_DureeEnHeure__c</fullName>
    <formula>TEXT(FLOOR( DurationInMinutes  / 60))
&amp;&apos;hr&apos;&amp; 
TEXT(MOD(DurationInMinutes ,60))
&amp;&apos;min&apos;</formula>
    <label>Durée (en Heure)</label>
    <type>Text</type>
</CustomField>