force-app/main/default/objects/TimeSheetEntry/fields/TE_HeuresDeTrajetAFacturer__c.field-meta.xml
<CustomField>
    <fullName>TE_HeuresDeTrajetAFacturer__c</fullName>
    <description>Ne pas supprimer ce champ technique permettant la remontée des temps depuis l&apos;app mobile FSL.</description>
    <label>Heure(s) de trajet à facturer</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>