force-app/main/default/objects/TimeSheetEntry/fields/Tech_DureeEnHeures__c.field-meta.xml
<CustomField>
    <fullName>Tech_DureeEnHeures__c</fullName>
    <formula>DurationInMinutes  / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_DureeEnHeures</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>