force-app/main/default/objects/TimeSheetEntry/fields/Tech_Talend_Export_EntreeFeuilleTemps__c.field-meta.xml
<CustomField>
    <fullName>Tech_Talend_Export_EntreeFeuilleTemps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_Talend_Export_EntreeFeuilleTemps</label>
    <type>Checkbox</type>
</CustomField>