force-app/main/default/objects/TimeSheetEntry/fields/Tech_VR01__c.field-meta.xml
<CustomField>
    <fullName>Tech_VR01__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_VR01</label>
    <type>Checkbox</type>
</CustomField>