force-app/main/default/objects/TimeSheetEntry/fields/TechPause__c.field-meta.xml
<CustomField>
    <fullName>TechPause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TechPause</label>
    <type>Checkbox</type>
</CustomField>