force-app/main/default/objects/TimeSheetEntry/fields/TechTrajetduSoir__c.field-meta.xml
<CustomField>
    <fullName>TechTrajetduSoir__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TechTrajetduSoir</label>
    <type>Checkbox</type>
</CustomField>