force-app/main/default/objects/TimeSheetEntry/fields/TSE_HeuresDeTrajetSoir__c.field-meta.xml
<CustomField>
    <fullName>TSE_HeuresDeTrajetSoir__c</fullName>
    <description>Ne pas supprimer ce champ technique permettant la remontée des temps depuis l&apos;app mobile FSL.</description>
    <label>Heure(s) de trajet soir</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>