force-app/main/default/objects/TimeSheetEntry/fields/TSE_KilometresParcourus__c.field-meta.xml
<CustomField>
    <fullName>TSE_KilometresParcourus__c</fullName>
    <label>Kilomètres parcourus</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>