force-app/main/default/objects/TimeSheetEntry/fields/TSE_NatureDuTemps__c.field-meta.xml
<CustomField>
    <fullName>TSE_NatureDuTemps__c</fullName>
    <label>Nature du temps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Trajet</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Travail</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Pause</label>
            </value>
            <value>
                <fullName>Interclient</fullName>
                <isActive>false</isActive>
                <label>Interclient</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>