force-app/main/default/objects/TimeSheetEntry/fields/TSE_RendezVousDeService__c.field-meta.xml
<CustomField>
    <fullName>TSE_RendezVousDeService__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rendez-vous de service</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Entrées de feuille de temps</relationshipLabel>
    <relationshipName>Entrees_de_feuille_de_temps</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>