force-app/main/default/objects/TimeSheetEntry/fields/TSE_TypeDeTrajet__c.field-meta.xml
<CustomField>
    <fullName>TSE_TypeDeTrajet__c</fullName>
    <description>NE pas supprimer ce champ technique permettant la remontée des temps depuis l&apos;app mobile FSL.</description>
    <label>Type de trajet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Début de journée</fullName>
            </value>
            <value>
                <fullName>Interclient</fullName>
            </value>
            <value>
                <fullName>Fin de journée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>