force-app/main/default/objects/TimeSheetEntry/recordTypes/RT_TE_Temps.recordType-meta.xml
<RecordType>
    <fullName>RT_TE_Temps</fullName>
    <active>true</active>
    <label>Temps</label>
</RecordType>