force-app/main/default/objects/TimeSheetEntry/recordTypes/RT_TE_Temps_de_trajet.recordType-meta.xml
<RecordType>
    <fullName>RT_TE_Temps_de_trajet</fullName>
    <active>true</active>
    <label>Temps de trajet</label>
</RecordType>