force-app/main/default/objects/TimeSheetEntry/validationRules/VR01_TSE_BloquerLesModificationsSoumis.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_TSE_BloquerLesModificationsSoumis</fullName>
    <active>true</active>
    <description>Cette règle permet de bloquer les modifications faites par un technicien aprés qu&apos;une entrée de feuille de temps soit au statut &quot;soumis&quot;</description>
    <errorConditionFormula>AND( NOT(ISCHANGED( Tech_VR01__c )),
$User.Technicien__c = TRUE, ISPICKVAL(Status ,&quot;Soumis&quot;))</errorConditionFormula>
    <errorMessage>Attention, vous n&apos;êtes pas autorisé à modifier les informations d&apos;une entrée de temps après l&apos;avoir soumise. Pour le moindre changement, merci de contacter le back-office.</errorMessage>
</ValidationRule>