force-app/main/default/objects/TimeSheetEntry/validationRules/VR02_TSE_BloquerLeFlowLorsqueRDVTermine.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_TSE_BloquerLeFlowLorsqueRDVTermine</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
$User.USER_ByPassRegleValidation__c = False ,
ISPICKVAL(TSE_RendezVousDeService__r.Status, &apos;Terminé&apos;)
, NOT( ISCHANGED(TechPause__c)),Not(TechPause__c)
, NOT( ISCHANGED(TechTrajetduSoir__c)),Not(TechTrajetduSoir__c),
NOT(ISPICKVAL(TSE_TypeDeTrajet__c, &apos;Fin de journée&apos;)), 
ISNEW() 
)</errorConditionFormula>
    <errorMessage>Votre intervention pour ce Rendez-vous de service est Terminée. Vous ne pouvez plus rien déclarer</errorMessage>
</ValidationRule>